Drag'n'drop: only activate clients after still hover

BUG: 395368